--- a/weather-widget/index.html
+++ b/weather-widget/index.html
@@ -19,5 +19,7 @@
           <p class="temperature">18</p>
         </div>
       </div>
+      <script src="config.js"></script>  
+      <script src="javascript/main.js"></script>
 </body>
 </html>
